<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="alighting_number">※ Alighting number</string>
    <string name="operation_schedule_receiving_html">※ &lt;big&gt;&lt;big&gt;Operation schedule receiving&lt;/big&gt;&lt;/big&gt;</string>
    <string name="app_name">※ InVehicleDevice application</string>
    <string name="arrival_schedule">※ Arrival schedule</string>
    <string name="departure_schedule">※ Departure schedule</string>
    <string name="does_it_arrive">※ Arrive ?</string>
    <string name="entrainment_number">※ Entrainment number</string>
    <string name="it_closes">※ Back</string>
    <string name="reservation_memo">※ Reservation memo</string>
    <string name="vehicle_notification_received">※ Vehicle notification received</string>
    <string name="user_memo">※ User memo</string>
    <string name="it_arrives">※ Arrival</string>
    <string name="it_arrives_button_text">@string/it_arrives</string>
    <string name="it_leaves">※ Leave</string>
    <string name="it_returns">※ Return</string>
    <string name="it_go_to_next_view">※ Go to next view</string>
    <string name="it_returns_to_platform_modal_view">※ Return to platform view</string>
    <string name="navi">※ Navi</string>
    <string name="map">※ Map</string>
    <string name="memo">※ Memo</string>
    <string name="next_platform_is">※ Next</string>
    <string name="no">※ No</string>
    <string name="present_time_format">※ HH:mm</string>
    <string name="scroll_down">※ Scroll down</string>
    <string name="scroll_up">※ Scroll up</string>
    <string name="yes">※ Yes</string>
    <string name="operation_schedule_was_changed">※ Operation schedule was changed</string>
    <string name="cancel">※ Cancel</string>
    <string name="show_operation_schedule">※ Show operation schedule</string>
    <string name="today_operation_schedule">※ Today\'s operation schedule</string>
    <string name="platform_arrival_time_format">※ HH:mm</string>
    <string name="todays_operation_was_finished">※ Today\'s operation was finished</string>
    <string name="now_platform_is_html">※ Now platform is &lt;big&gt;&lt;big&gt;%s&lt;/big&gt;&lt;/big&gt;</string>
    <string name="next_platform_is_html">※ Next platform is &lt;big&gt;&lt;big&gt;%s&lt;/big&gt;&lt;/big&gt;</string>
    <string name="minutes_remaining_to_depart_html">※ %1$s出発&lt;br&gt;あと&lt;big&gt;&lt;font color=&quot;red&quot;&gt;%2$d&lt;/font&gt;&lt;/big&gt;分</string>
    <string name="platform_arrival_time">※ HH:mm</string>
    <string name="crash_toast_text">※ Unexpected error occurred</string>
    <string name="platform_memo">※ Platform memo</string>
    <string name="failed_to_connect_operator_tool">※ Failed_to_connect_operator_tool</string>
    <string name="show_passengers">※  Show passengers</string>
    <string name="hide_passengers">※  Hide passengers</string>
    <string name="connection_config">※ Connection config</string>
    <string name="server_url">※ Server url</string>
    <string name="login">※ Login</string>
    <string name="password">※ Password</string>
    <string name="ok">※ OK</string>
    <string name="an_error_occurred">※ An error occurred</string>
    <string name="checking_connection_config">※ Checking connection config</string>
    <string name="error_null_or_empty">※ Error null or empty</string>
    <string name="error_non_ascii">※ Error non ascii</string>
    <string name="error_invalid_uri">※ Error invalid uri</string>
    <string name="error_invalid_login_or_password">※ Error invalid login or password</string>
    <string name="error_connection">※ Error connection</string>
    <string name="voice_file">※ Voice file</string>
    <string name="misc">※ Misc</string>
    <string name="privacy_policy">※ Privacy policy</string>
    <string name="get_on">※ Get on</string>
    <string name="received_charge">※ Received charge</string>
    <string name="monetary_unit">※ Monetary unit</string>
    <string name="expected_charge">※ Expected charge</string>
    <string name="location_description">※ location description</string>
    <string name="google_navigation_app_name">※ google navigation app name</string>
    <string name="yahoo_navigation_app_name">※ yahoo navigation app name</string>
</resources>