<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

    <PreferenceCategory android:title="@string/connection_config" >
        <EditTextPreference
            android:dialogTitle="@string/server_url"
            android:inputType="textUri"
            android:key="url"
            android:maxLines="1"
            android:title="@string/server_url" />
        <EditTextPreference
            android:dialogTitle="@string/login"
            android:inputType="text"
            android:key="login"
            android:maxLines="1"
            android:title="@string/login" />
        <EditTextPreference
            android:dialogTitle="@string/password"
            android:inputType="textPassword"
            android:key="password"
            android:maxLines="1"
            android:title="@string/password" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/voice_file" >
        <Preference android:key="voice_download_state" />
    </PreferenceCategory>
</PreferenceScreen>