<?xml version="1.0" encoding="utf-8"?>

<!-- 運行トップ画面右のボタン設定 -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_marginLeft="5dp">

    <Button
        android:id="@+id/navi_button"
        style="@style/ControlBarFragment.Button"
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:layout_weight="1"
        android:layout_marginBottom="2dp"
        android:background="@drawable/custom_button"
        android:textColor="@drawable/custom_button_text_color"
        android:text="@string/navi" />

    <Button
        android:id="@+id/map_button"
        style="@style/ControlBarFragment.Button"
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:layout_weight="1"
        android:visibility="gone"
        android:layout_marginTop="2dp"
        android:layout_marginBottom="2dp"
        android:background="@drawable/custom_button"
        android:textColor="@drawable/custom_button_text_color"
        android:text="@string/map" />

    <Button
        android:id="@+id/operation_schedule_list_button"
        style="@style/ControlBarFragment.Button"
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:layout_weight="1"
        android:layout_marginTop="2dp"
        android:layout_marginBottom="2dp"
        android:background="@drawable/custom_button"
        android:textColor="@drawable/custom_button_text_color"
        android:text="@string/today_operation_schedule" />

    <Button
        android:id="@+id/change_phase_button"
        style="@style/ControlBarFragment.Button"
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:layout_weight="1"
        android:layout_marginTop="2dp"
        android:background="@drawable/custom_button"
        android:textColor="@drawable/custom_button_text_color"
        android:text="@string/it_arrives_button_text" />

</LinearLayout>