<?xml version="1.0" encoding="utf-8"?>

<!-- 運用者通知画面設定 -->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/ModalView.Layout" >

    <TextView
        android:id="@+id/notification_modal_title_text_view"
        style="@style/ModalView.Title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:textSize="24sp"
        android:text="@string/vehicle_notification_received" />

    <TextView
        android:id="@+id/notification_text_view"
        style="@style/ModalView.Content"
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:layout_above="@+id/notification_modal_buttons"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/notification_modal_title_text_view"
        android:layout_margin="5dp"
        android:background="@drawable/border"
        android:textSize="30sp"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <LinearLayout
        android:id="@+id/notification_modal_buttons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true" >

        <Button
            style="@style/ModalView.Button"
            android:id="@+id/reply_yes_button"
            android:paddingTop="15sp"
            android:paddingBottom="15sp"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:textSize="30sp"
            android:text="@string/yes" />

        <Button
            style="@style/ModalView.Button"
            android:id="@+id/reply_no_button"
            android:paddingTop="15sp"
            android:paddingBottom="15sp"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:textSize="30sp"
            android:text="@string/no" />
    </LinearLayout>

</RelativeLayout>