<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/ModalView.Layout" >

    <TextView
        android:id="@+id/schedule_vehicle_notification_title_text_view"
        style="@style/ModalView.Title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:text="@string/operation_schedule_was_changed"
        android:textSize="26sp" />

    <TextView
        android:id="@+id/schedule_vehicle_notification_detail_text_view"
        style="@style/ModalView.Content"
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:layout_above="@+id/schedule_vehicle_notification_buttons"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/schedule_vehicle_notification_title_text_view"
        android:layout_margin="5dp"
        android:background="@drawable/border"
        android:textSize="30sp" />

    <LinearLayout
        android:id="@+id/schedule_vehicle_notification_buttons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true" >

        <Button
            android:id="@+id/schedule_vehicle_notification_operation_list_button"
            style="@style/ModalView.Button"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:paddingBottom="15sp"
            android:paddingTop="15sp"
            android:text="@string/show_operation_schedule"
            android:textSize="30sp" />

        <Button
            android:id="@+id/schedule_vehicle_notification_close_button"
            style="@style/ModalView.Button"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:paddingBottom="15sp"
            android:paddingTop="15sp"
            android:text="@string/it_returns"
            android:textSize="30sp" />
    </LinearLayout>

</RelativeLayout>