<?xml version="1.0" encoding="utf-8"?>

<!-- 運行予定画面設定 -->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/ModalView.Layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <com.kogasoftware.odt.invehicledevice.view.fragment.listflow.utils.FlickUnneededListView
        android:id="@+id/operation_list_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/operation_list_buttons"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true" />

    <LinearLayout
        android:id="@+id/operation_list_buttons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/operation_list_show_passengers_button"
            style="@style/ModalView.Button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_margin="5dp"
            android:paddingBottom="15sp"
            android:paddingTop="15sp"
            android:text="@string/show_passengers"
            android:background="@drawable/custom_button"
            android:textColor="@color/custom_btn_text_color"
            android:textSize="30sp" />

        <Button
            android:id="@+id/operation_list_hide_passengers_button"
            style="@style/ModalView.Button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_margin="5dp"
            android:paddingBottom="15sp"
            android:paddingTop="15sp"
            android:text="@string/hide_passengers"
            android:textSize="30sp"
            android:background="@drawable/custom_button"
            android:textColor="@color/custom_btn_text_color"
            android:visibility="gone" />

        <Button
            android:id="@+id/operation_list_close_button"
            style="@style/ModalView.Button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_margin="5dp"
            android:paddingBottom="15sp"
            android:paddingTop="15sp"
            android:text="@string/it_returns"
            android:background="@drawable/custom_button"
            android:textColor="@color/custom_btn_text_color"
            android:textSize="30sp" />
    </LinearLayout>

</RelativeLayout>