<?xml version="1.0" encoding="utf-8"?>

<!-- 予約メモ画面設定 -->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/ModalView.Layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <TextView
        android:id="@+id/memo_title_text_view"
        style="@style/ModalView.Title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:textSize="30sp" />

    <LinearLayout
        android:id="@+id/memo_each_titles"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/memo_title_text_view" >

        <TextView
            style="@style/ModalView.Title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/reservation_memo"
            android:textSize="24sp" />

        <TextView
            style="@style/ModalView.Title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/user_memo"
            android:textSize="24sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:layout_above="@+id/passenger_record_memo_close_button"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/memo_each_titles" >

        <TextView
            android:id="@+id/reservation_memo_text_view"
            style="@style/ModalView.Content"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_margin="1dp"
            android:layout_weight="1"
            android:background="@drawable/border"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/user_memo_text_view"
            style="@style/ModalView.Content"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_margin="1dp"
            android:layout_weight="1"
            android:background="@drawable/border"
            android:textSize="30sp" />
    </LinearLayout>

    <Button
        android:id="@+id/passenger_record_memo_close_button"
        style="@style/ModalView.Button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:paddingBottom="15sp"
        android:paddingTop="15sp"
        android:text="@string/it_closes"
        android:textSize="30sp" />

</RelativeLayout>